Fix publication cards on narrow screens

--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -411,6 +411,7 @@
 
 .selected-pub {
   display: grid;
+  grid-template-columns: minmax(0, 1fr);
   gap: 1em;
   padding: 1.25em 0;
   border-bottom: 1px solid $border-color;
@@ -429,6 +430,8 @@
 .selected-pub__media {
   position: relative;
   display: block;
+  min-width: 0;
+  width: 100%;
   overflow: hidden;
   aspect-ratio: 16 / 9;
   background: $dark-gray;
